--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcc 'HV'
 - !lcsh 'Police -- United States'
 - !lcsh 'Tramps'
+- GITenberg
 title: Notes of an Itinerant Policeman
 url: http://www.gutenberg.org/ebooks/35040
